docs(edge): document scaffold gateway states
Rewrite the mobile BFF and admin gateway READMEs so they accurately describe the current scaffold implementations, clearly separate planned target architecture from live behavior, and add local-dev, deployment, and testing status guidance.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>